--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,6 +40,7 @@
       }
     ],
     "no-use-before-define": "off",
-    "@typescript-eslint/no-use-before-define": ["error"]
+    "@typescript-eslint/no-use-before-define": ["error"],
+    "import/order": ["error", { "alphabetize": { "order": "asc" } }]
   }
 }
