Upgrade build & format

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,33 +1,16 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true,
-    "node": true
-  },
+  "plugins": [
+    "prettier",
+    "import",
+    "unused-imports"
+  ],
   "extends": [
-    "plugin:react/recommended",
-    "standard",
+    "next/core-web-vitals",
     "plugin:prettier/recommended"
   ],
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": 12,
-    "sourceType": "module"
-  },
-  "plugins": [
-    "react",
-    "@typescript-eslint",
-    "prettier"
-  ],
-  "settings": {
-    "react": {
-      "version": "detect"
-    }
-  },
   "rules": {
+    "@next/next/no-img-element": "off",
+    "@next/next/no-html-link-for-pages": ["error", "renderer/pages"],
     "prettier/prettier": [
       "error",
       {
@@ -39,8 +22,14 @@
         "semi": false
       }
     ],
-    "no-use-before-define": "off",
-    "@typescript-eslint/no-use-before-define": ["error"],
-    "import/order": ["error", { "alphabetize": { "order": "asc" } }]
+    "import/order": [
+      "error",
+      {
+        "alphabetize": {
+          "order": "asc"
+        }
+      }
+    ],
+    "unused-imports/no-unused-imports": "error"
   }
 }
