--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
     "build-renderer": "next build renderer && next export renderer",
     "build-electron": "tsc -p electron-src",
     "build": "npm run build-renderer && npm run build-electron",
-    "pack-app": "npm run build && electron-builder --dir",
     "dist": "npm run build && electron-builder",
-    "type-check": "tsc",
     "prepare": "husky install",
-    "lint-staged": "lint-staged"
+    "lint-staged": "lint-staged",
+    "format": "eslint . --ext .ts,.tsx --fix"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
@@ -31,24 +30,19 @@
     "@types/node": "^14.14.6",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
-    "@typescript-eslint/eslint-plugin": "^4.24.0",
-    "@typescript-eslint/parser": "^4.24.0",
     "electron": "^11.4.5",
     "electron-builder": "^22.9.1",
-    "eslint": "^7.26.0",
+    "eslint": "^8.28.0",
+    "eslint-config-next": "^13.0.4",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.23.2",
-    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-react": "^7.23.2",
-    "husky": "^6.0.0",
-    "lint-staged": "^11.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "husky": "^8.0.2",
+    "lint-staged": "^13.0.3",
     "next": "13.0.4",
-    "prettier": "^2.3.0",
+    "prettier": "^2.8.0",
     "rimraf": "^3.0.0",
-    "typescript": "^4.0.5"
+    "typescript": "^4.9.3"
   },
   "build": {
     "asar": true,
